feat: adição de dois forms que fazem parte do cadastro presente no menu.jsx

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,6 @@
     flex-direction: row;
     align-items: center;
     width: 100%;
-    background-image: linear-gradient(to left, #411e5a 0%, #224d52 100%);
+    background-image: linear-gradient(180deg,#000000 0%,#010d38 100%);
     gap: 500px;
 }
