--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,12 @@
     padding: 0;
     box-sizing: 0;
   }
+
+  a {
+    text-decoration: none;
+  }
+
+  #root {
+    display: flex;
+    flex-direction: row;
+  }
