refactor: passando os caminhos corretos das rotas para o menu lateral e svg na home

--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -2,5 +2,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: linear-gradient(180deg,#000000 0%,#010d38 100%);
+  width: 100%;
+}
+
+.container > img {
+  width: 50%;
 }
