--- a/src/index.css
+++ b/src/index.css
@@ -11,4 +11,5 @@
   #root {
     display: flex;
     flex-direction: row;
+    background-image: linear-gradient(180deg,#000000 0%,#010d38 100%);
   }
