--- a/src/components/Menu/Menu.module.css
+++ b/src/components/Menu/Menu.module.css
@@ -1,7 +1,8 @@
 .container {
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
     height: 100vh;
     width: 20%;
     background-color: #d0d0d0;
@@ -12,5 +13,5 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-    height: 70%;
+    height: 90vh;
 }
