--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -1,18 +1,19 @@
 .container {
   display: flex;
-  justify-content: center;
-  align-items:flex-start;
+  align-items:center;
   gap: 50px;
-  height: 50vh;
+  height: 60vh;
   padding: 20px;
   background-color: #efefef;
-  font-size: 20px;
+  font-size: 25px;
   border-radius: 25px;
 }
 
 .form {
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
+  height: 80%;
   gap: 10px;
   color: #000000;
   
