--- a/src/pages/Cadastrar/Cadastrar.module.css
+++ b/src/pages/Cadastrar/Cadastrar.module.css
@@ -1,6 +1,15 @@
 .container {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 100%;
+  gap: 100px;
+}
+
+.container > h2 {
+  color: #ffffff;
+  font-size: 3em;
+  align-self: start;
+  padding-left: 50px;
 }
