--- a/src/pages/Clientes/Clientes.module.css
+++ b/src/pages/Clientes/Clientes.module.css
@@ -11,16 +11,19 @@
     align-items: center;
     align-self: center;
     justify-self: center;
+    justify-content: flex-start;
+    gap: 20px;
     width: 40%;
     height: 80vh;
     border: 5px solid #585850;
     border-radius: 10px;
-    background-color: #777777;
+    background-color: #968d8d;
 }
 
 .container > h2 {
-    background-color: #D9D9D9;
+    background-color: #ffffff;
     text-align: center;
+    font-weight: bold;
     width: 100%;
     border-radius: 5px 5px 0px 0px;
 }
