--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -1,6 +1,15 @@
 .container {
   display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 100vh;
+}
+
+.containerForm {
+  display: flex;
   align-items:center;
+  align-items: flex-start;
   gap: 50px;
   height: 60vh;
   padding: 20px;
@@ -12,7 +21,7 @@
 .form {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-between;
   height: 80%;
   gap: 10px;
   color: #000000;
@@ -24,11 +33,37 @@
 }
 
 .input {
-  top: 441px;
-  left: 870px;
   width: 340px;
   height: 30px;
   background: #ffffff 0% 0% no-repeat padding-box;
   border: 1px solid #707070;
-  opacity: 1;
+  border-radius: 5px;
+  text-align: left;
+  padding-left: 10px;
+}
+
+.containerBtn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.btn {
+  width: 200px;
+  height: 40px;
+  color: #ffffff;
+  text-align: center;
+  font-family: "Dosis", sans-serif;
+  background-image: linear-gradient(to bottom, #8618df 0%, #3fe5f1 100%);
+  background-clip: padding-box;
+  border-radius: 5px;
+  font-size: 20px;
+  border: 0;
+  cursor: pointer;
+}
+
+.btn:hover {
+  transform: scale(1.1);
+  transition: all 0.5s;
 }
