--- a/src/components/FormEndereco/FormEndereco.module.css
+++ b/src/components/FormEndereco/FormEndereco.module.css
@@ -1,34 +1,68 @@
 .container {
-    display: flex;
-    justify-content: center;
-    align-items:flex-start;
-    gap: 50px;
-    height: 50vh;
-    padding: 20px;
-    background-color: #efefef;
-    font-size: 20px;
-    border-radius: 25px;
-  }
-  
-  .form {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    color: #000000;
-    
-  }
-  
-  .label {
-    text-align: left;
-  }
-  
-  .input {
-    top: 441px;
-    left: 870px;
-    width: 340px;
-    height: 30px;
-    background: #ffffff 0% 0% no-repeat padding-box;
-    border: 1px solid #707070;
-    opacity: 1;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 100vh;
+}
+
+.containerForm {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 50px;
+  height: 60vh;
+  padding: 20px;
+  background-color: #efefef;
+  font-size: 25px;
+  border-radius: 25px;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 80%;
+  gap: 10px;
+  color: #000000;
+}
+
+.label {
+  text-align: left;
+}
+
+.input {
+  width: 340px;
+  height: 30px;
+  background: #ffffff 0% 0% no-repeat padding-box;
+  border: 1px solid #707070;
+  border-radius: 5px;
+  text-align: left;
+  padding-left: 10px;
+}
+
+.containerBtn {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  height: 20vh;
+}
+
+.btn {
+  width: 200px;
+  height: 40px;
+  color: #ffffff;
+  text-align: center;
+  font-family: "Dosis", sans-serif;
+  background-image: linear-gradient(to bottom, #8618df 0%, #3fe5f1 100%);
+  background-clip: padding-box;
+  border-radius: 5px;
+  font-size: 20px;
+  border: 0;
+  cursor: pointer;
+}
+
+.btn:hover {
+  transform: scale(1.1);
+  transition: all 0.5s;
+}
