--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -3,8 +3,13 @@
   justify-content: center;
   align-items: center;
   width: 100%;
+  gap: 100px;
 }
 
 .container > img {
   width: 50%;
+}
+
+.container h1 {
+  color: #B7E3ED;
 }
